# ChatTerm

./: CMakeLists.txt  readme.md
lib/: NetworkUtils.h
src/: NetworkUtils.cpp  client.cpp  server.cpp
